relpace pic to local

--- a/Introduction/Tutorial/02-快速入门.ipynb
+++ b/Introduction/Tutorial/02-快速入门.ipynb
@@ -4,25 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![下载Notebook](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_notebook.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3/tutorials/zh_cn/beginner/mindspore_quick_start.ipynb)&emsp;[![下载样例代码](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_download_code.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3/tutorials/zh_cn/beginner/mindspore_quick_start.py)&emsp;[![查看源文件](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_source.svg)](https://gitee.com/mindspore/docs/blob/r2.3/tutorials/source_zh_cn/beginner/quick_start.ipynb)\n",
-    "\n",
-    "[基本介绍](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/introduction.html) || **快速入门** || [张量 Tensor](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/tensor.html) || [数据集 Dataset](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/dataset.html) || [数据变换 Transforms](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/transforms.html) || [网络构建](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/model.html) || [函数式自动微分](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/autograd.html) || [模型训练](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/train.html) || [保存与加载](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/save_load.html) || [使用静态图加速](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/accelerate_with_static_graph.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 快速入门\n",
     "\n",
     "本节通过MindSpore的API来快速实现一个简单的深度学习模型。若想要深入了解MindSpore的使用方法，请参阅各节最后提供的参考链接。"
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%capture captured_output\n",
     "# 实验环境已经预装了mindspore==2.2.14，如需更换mindspore版本，可更改下面mindspore的版本号\n",
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,21 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/datasets/MNIST_Data.zip (10.3 MB)\n",
-      "\n",
-      "file_sizes: 100%|██████████████████████████| 10.8M/10.8M [00:01<00:00, 6.73MB/s]\n",
-      "Extracting zip file...\n",
-      "Successfully downloaded / unzipped to ./\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download data from open datasets\n",
     "from download import download\n",
@@ -101,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,17 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['image', 'label']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(train_dataset.get_col_names())"
    ]
@@ -142,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,18 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of image [N, C, H, W]: (64, 1, 28, 28) Float32\n",
-      "Shape of label: (64,) Int32\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for image, label in test_dataset.create_tuple_iterator():\n",
     "    print(f\"Shape of image [N, C, H, W]: {image.shape} {image.dtype}\")\n",
@@ -201,18 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of image [N, C, H, W]: (64, 1, 28, 28) Float32\n",
-      "Shape of label: (64,) Int32\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for data in test_dataset.create_dict_iterator():\n",
     "    print(f\"Shape of image [N, C, H, W]: {data['image'].shape} {data['image'].dtype}\")\n",
@@ -238,26 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Network<\n",
-      "  (flatten): Flatten<>\n",
-      "  (dense_relu_sequential): SequentialCell<\n",
-      "    (0): Dense<input_channels=784, output_channels=512, has_bias=True>\n",
-      "    (1): ReLU<>\n",
-      "    (2): Dense<input_channels=512, output_channels=512, has_bias=True>\n",
-      "    (3): ReLU<>\n",
-      "    (4): Dense<input_channels=512, output_channels=10, has_bias=True>\n",
-      "    >\n",
-      "  >\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define model\n",
     "class Network(nn.Cell):\n",
@@ -319,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,62 +325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1\n",
-      "-------------------------------\n",
-      "loss: 2.302088  [  0/938]\n",
-      "loss: 2.290692  [100/938]\n",
-      "loss: 2.266338  [200/938]\n",
-      "loss: 2.205240  [300/938]\n",
-      "loss: 1.907198  [400/938]\n",
-      "loss: 1.455603  [500/938]\n",
-      "loss: 0.861103  [600/938]\n",
-      "loss: 0.767219  [700/938]\n",
-      "loss: 0.422253  [800/938]\n",
-      "loss: 0.513922  [900/938]\n",
-      "Test: \n",
-      " Accuracy: 83.8%, Avg loss: 0.529534 \n",
-      "\n",
-      "Epoch 2\n",
-      "-------------------------------\n",
-      "loss: 0.580867  [  0/938]\n",
-      "loss: 0.479347  [100/938]\n",
-      "loss: 0.677991  [200/938]\n",
-      "loss: 0.550141  [300/938]\n",
-      "loss: 0.226565  [400/938]\n",
-      "loss: 0.314738  [500/938]\n",
-      "loss: 0.298739  [600/938]\n",
-      "loss: 0.459540  [700/938]\n",
-      "loss: 0.332978  [800/938]\n",
-      "loss: 0.406709  [900/938]\n",
-      "Test: \n",
-      " Accuracy: 90.2%, Avg loss: 0.334828 \n",
-      "\n",
-      "Epoch 3\n",
-      "-------------------------------\n",
-      "loss: 0.461890  [  0/938]\n",
-      "loss: 0.242303  [100/938]\n",
-      "loss: 0.281414  [200/938]\n",
-      "loss: 0.207835  [300/938]\n",
-      "loss: 0.206000  [400/938]\n",
-      "loss: 0.409646  [500/938]\n",
-      "loss: 0.193608  [600/938]\n",
-      "loss: 0.217575  [700/938]\n",
-      "loss: 0.212817  [800/938]\n",
-      "loss: 0.202862  [900/938]\n",
-      "Test: \n",
-      " Accuracy: 91.9%, Avg loss: 0.280962 \n",
-      "\n",
-      "Done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "epochs = 3\n",
     "for t in range(epochs):\n",
@@ -472,17 +355,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved Model to model.ckpt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save checkpoint\n",
     "mindspore.save_checkpoint(model, \"model.ckpt\")\n",
@@ -508,17 +383,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Instantiate a random initialized model\n",
     "model = Network()\n",
@@ -544,17 +411,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted: \"Tensor(shape=[10], dtype=Int32, value= [3, 9, 6, 1, 6, 7, 4, 5, 2, 2])\", Actual: \"Tensor(shape=[10], dtype=Int32, value= [3, 9, 6, 1, 6, 7, 4, 5, 2, 2])\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.set_train(False)\n",
     "for data, label in test_dataset:\n",
@@ -574,9 +433,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MindSpore",
+   "display_name": "Conda-python3",
    "language": "python",
-   "name": "mindspore"
+   "name": "conda-python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -588,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5 (default, Oct 25 2019, 15:51:11) \n[GCC 7.3.0]"
+   "version": "3.6.4"
   },
   "vscode": {
    "interpreter": {
