--- a/Introduction/Tutorial/05-数据变换Transforms.ipynb
+++ b/Introduction/Tutorial/05-数据变换Transforms.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e31ebc8-b449-4052-b959-8f473b6c9fb7",
-   "metadata": {},
-   "source": [
-    "[![下载Notebook](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_notebook.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3/tutorials/zh_cn/beginner/mindspore_transforms.ipynb)&emsp;[![下载样例代码](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_download_code.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3/tutorials/zh_cn/beginner/mindspore_transforms.py)&emsp;[![查看源文件](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_source.svg)](https://gitee.com/mindspore/docs/blob/r2.3/tutorials/source_zh_cn/beginner/transforms.ipynb)\n",
-    "\n",
-    "[基本介绍](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/introduction.html) || [快速入门](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/quick_start.html) || [张量 Tensor](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/tensor.html) || [数据集 Dataset](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/dataset.html) || **数据变换 Transforms** || [网络构建](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/model.html) || [函数式自动微分](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/autograd.html) || [模型训练](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/train.html) || [保存与加载](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/save_load.html) || [使用静态图加速](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/accelerate_with_static_graph.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ca3f817f-57c1-42df-9529-3e390d067cf1",
    "metadata": {},
    "source": [
@@ -23,21 +13,21 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "6bcdf78eb2925c12",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%capture captured_output\n",
     "# 实验环境已经预装了mindspore==2.2.14，如需更换mindspore版本，可更改下面mindspore的版本号\n",
     "!pip uninstall mindspore -y\n",
     "!pip install -i https://pypi.mirrors.ustc.edu.cn/simple mindspore==2.2.14"
-   ],
-   "id": "6bcdf78eb2925c12"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "20a2f211-4515-4442-8c2b-c02b64dc668e",
    "metadata": {},
    "outputs": [],
@@ -67,22 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "abf6b9fe-688a-4dac-9a00-962eda1eb64f",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Downloading data from https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/datasets/MNIST_Data.zip (10.3 MB)\n",
-      "\n",
-      "file_sizes: 100%|██████████████████████████| 10.8M/10.8M [00:01<00:00, 9.01MB/s]\n",
-      "Extracting zip file...\n",
-      "Successfully downloaded / unzipped to ./\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download data from open datasets\n",
     "\n",
@@ -95,18 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1bab3ebe-d258-4581-ad69-9bb85a7b7814",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "(28, 28, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "image, label = next(train_dataset.create_tuple_iterator())\n",
     "print(image.shape)"
@@ -114,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "87f4777b-1794-43b9-9816-44360b9c51db",
    "metadata": {},
    "outputs": [],
@@ -130,18 +100,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0adfef6c-d730-4f0c-9a53-720cfc0d61c0",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "(1, 28, 28)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_dataset = train_dataset.map(composed, 'image')\n",
     "image, label = next(train_dataset.create_tuple_iterator())\n",
@@ -185,18 +147,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c99377ed-e1ae-4c6f-8285-cde61039c069",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[[170  10 218 ...  81 128  96]\n [  2 107 146 ... 239 178 165]\n [232 137 235 ... 222 109 216]\n ...\n [193 140  60 ...  72 133 144]\n [232 175  58 ...  55 110  94]\n [152 241 105 ... 187  45  43]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "random_np = np.random.randint(0, 255, (48, 48), np.uint8)\n",
     "random_image = Image.fromarray(random_np)\n",
@@ -213,18 +167,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "516f4169-a13f-42b2-b976-222b029194a1",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[[0.6666667  0.03921569 0.854902   ... 0.31764707 0.5019608  0.37647063]\n [0.00784314 0.41960788 0.57254905 ... 0.93725497 0.69803923 0.64705884]\n [0.909804   0.5372549  0.9215687  ... 0.8705883  0.427451   0.8470589 ]\n ...\n [0.7568628  0.54901963 0.23529413 ... 0.28235295 0.52156866 0.5647059 ]\n [0.909804   0.6862745  0.227451   ... 0.21568629 0.43137258 0.36862746]\n [0.59607846 0.9450981  0.41176474 ... 0.73333335 0.1764706  0.16862746]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rescale = vision.Rescale(1.0 / 255.0, 0)\n",
     "rescaled_image = rescale(random_image)\n",
@@ -257,18 +203,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e370e1a3-1101-4280-be6a-befb0fbb532d",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[[ 1.7395868  -0.29693064  2.3505423  ...  0.60677403  1.2050011\n   0.7976976 ]\n [-0.3987565   0.9377082   1.4341093  ...  2.617835    1.8414128\n   1.6759458 ]\n [ 2.5287375   1.3195552   2.5669222  ...  2.4014552   0.9631647\n   2.3250859 ]\n ...\n [ 2.0323365   1.3577399   0.33948112 ...  0.49221992  1.2686423\n   1.4086528 ]\n [ 2.5287375   1.803228    0.31402466 ...  0.27583995  0.9758929\n   0.77224106]\n [ 1.5104787   2.6432917   0.9122518  ...  1.9559668   0.14855757\n   0.12310111]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "normalize = vision.Normalize(mean=(0.1307,), std=(0.3081,))\n",
     "normalized_image = normalize(rescaled_image)\n",
@@ -289,18 +227,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3725b284-f2df-45f3-a7f7-8c3a68e3d44a",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "(48, 48, 1) (1, 48, 48)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hwc_image = np.expand_dims(normalized_image, -1)\n",
     "hwc2chw = vision.HWC2CHW()\n",
@@ -336,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6d93837b-d975-4044-8e24-58fb2f4e5011",
    "metadata": {},
    "outputs": [],
@@ -346,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "598bca9b-e755-4fe2-a7d6-b152e82c9d1a",
    "metadata": {},
    "outputs": [],
@@ -366,18 +296,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6636e1d1-59b9-4198-bab9-5a7343a66710",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[Tensor(shape=[3], dtype=String, value= ['Welcome', 'to', 'Beijing'])]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def my_tokenizer(content):\n",
     "    return content.split()\n",
@@ -398,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "00884c33-a3ee-4b8f-8ee3-582d210fce85",
    "metadata": {},
    "outputs": [],
@@ -416,18 +338,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "cebc8d0d-a9e4-45c3-bc00-742d903632e9",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "{'to': 2, 'Beijing': 0, 'Welcome': 1}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(vocab.vocab())"
    ]
@@ -442,18 +356,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "8919313b-e1c8-45e0-8b81-e0815f75b626",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[Tensor(shape=[3], dtype=Int32, value= [1, 2, 0])]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_dataset = test_dataset.map(text.Lookup(vocab))\n",
     "print(next(test_dataset.create_tuple_iterator()))"
@@ -481,18 +387,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f49555eb-82a2-449e-b97f-ce9620e9d7d4",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[[Tensor(shape=[], dtype=Int64, value= 2)], [Tensor(shape=[], dtype=Int64, value= 4)], [Tensor(shape=[], dtype=Int64, value= 6)]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_dataset = GeneratorDataset([1, 2, 3], 'data', shuffle=False)\n",
     "test_dataset = test_dataset.map(lambda x: x * 2)\n",
@@ -511,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "124f2f07-cc2f-4093-ba1f-9de56adcf06a",
    "metadata": {},
    "outputs": [],
@@ -524,18 +422,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "0deb59e5-54c3-4c12-9e00-f48570b9bb77",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[[Tensor(shape=[], dtype=Int64, value= 6)], [Tensor(shape=[], dtype=Int64, value= 18)], [Tensor(shape=[], dtype=Int64, value= 38)]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(list(test_dataset.create_tuple_iterator()))"
    ]
@@ -543,9 +433,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MindSpore",
+   "display_name": "Conda-python3",
    "language": "python",
-   "name": "mindspore"
+   "name": "conda-python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -557,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.4"
   },
   "vscode": {
    "interpreter": {
