--- a/Introduction/Tutorial/06-网络构建.ipynb
+++ b/Introduction/Tutorial/06-网络构建.ipynb
@@ -4,15 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![下载Notebook](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_notebook.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3/tutorials/zh_cn/beginner/mindspore_model.ipynb)&emsp;[![下载样例代码](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_download_code.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3/tutorials/zh_cn/beginner/mindspore_model.py)&emsp;[![查看源文件](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_source.svg)](https://gitee.com/mindspore/docs/blob/r2.3/tutorials/source_zh_cn/beginner/model.ipynb)\n",
-    "\n",
-    "[基本介绍](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/introduction.html) || [快速入门](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/quick_start.html) || [张量 Tensor](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/tensor.html) || [数据集 Dataset](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/dataset.html) || [数据变换 Transforms](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/transforms.html) || **网络构建** || [函数式自动微分](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/autograd.html) || [模型训练](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/train.html) || [保存与加载](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/save_load.html) || [使用静态图加速](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/accelerate_with_static_graph.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 网络构建"
    ]
   },
@@ -26,10 +17,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%capture captured_output\n",
     "# 实验环境已经预装了mindspore==2.2.14，如需更换mindspore版本，可更改下面mindspore的版本号\n",
@@ -39,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": true,
@@ -104,33 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Network<\n",
-       "  (flatten): Flatten<>\n",
-       "  (dense_relu_sequential): SequentialCell<\n",
-       "    (0): Dense<input_channels=784, output_channels=512, has_bias=True>\n",
-       "    (1): ReLU<>\n",
-       "    (2): Dense<input_channels=512, output_channels=512, has_bias=True>\n",
-       "    (3): ReLU<>\n",
-       "    (4): Dense<input_channels=512, output_channels=10, has_bias=True>\n",
-       "    >\n",
-       "  >"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = Network()\n",
     "print(model)"
@@ -147,21 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Tensor(shape=[1, 10], dtype=Float32, value=\n",
-       "[[-5.08734025e-04,  3.39190010e-04,  4.62840870e-03 ... -1.20305456e-03, -5.05689112e-03,  3.99264274e-03]])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = ops.ones((1, 28, 28), mindspore.float32)\n",
     "logits = model(X)\n",
@@ -178,17 +137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted class: [4]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pred_probab = nn.Softmax(axis=1)(logits)\n",
     "y_pred = pred_probab.argmax(1)\n",
@@ -210,20 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 28, 28)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_image = ops.ones((3, 28, 28), mindspore.float32)\n",
     "print(input_image.shape)"
@@ -244,24 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 784)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "flatten = nn.Flatten()\n",
     "flat_image = flatten(input_image)\n",
@@ -281,20 +210,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 20)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "layer1 = nn.Dense(in_channels=28*28, out_channels=20)\n",
     "hidden1 = layer1(flat_image)\n",
@@ -316,46 +234,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before ReLU: [[-0.04736331  0.2939465  -0.02713677 -0.30988005 -0.11504349 -0.11661264\n",
-      "   0.18007928  0.43213072  0.12091967 -0.17465964  0.53133243  0.12605792\n",
-      "   0.01825903  0.01287796  0.17238477 -0.1621131  -0.0080034  -0.24523425\n",
-      "  -0.10083733  0.05171938]\n",
-      " [-0.04736331  0.2939465  -0.02713677 -0.30988005 -0.11504349 -0.11661264\n",
-      "   0.18007928  0.43213072  0.12091967 -0.17465964  0.53133243  0.12605792\n",
-      "   0.01825903  0.01287796  0.17238477 -0.1621131  -0.0080034  -0.24523425\n",
-      "  -0.10083733  0.05171938]\n",
-      " [-0.04736331  0.2939465  -0.02713677 -0.30988005 -0.11504349 -0.11661264\n",
-      "   0.18007928  0.43213072  0.12091967 -0.17465964  0.53133243  0.12605792\n",
-      "   0.01825903  0.01287796  0.17238477 -0.1621131  -0.0080034  -0.24523425\n",
-      "  -0.10083733  0.05171938]]\n",
-      "\n",
-      "\n",
-      "After ReLU: [[0.         0.2939465  0.         0.         0.         0.\n",
-      "  0.18007928 0.43213072 0.12091967 0.         0.53133243 0.12605792\n",
-      "  0.01825903 0.01287796 0.17238477 0.         0.         0.\n",
-      "  0.         0.05171938]\n",
-      " [0.         0.2939465  0.         0.         0.         0.\n",
-      "  0.18007928 0.43213072 0.12091967 0.         0.53133243 0.12605792\n",
-      "  0.01825903 0.01287796 0.17238477 0.         0.         0.\n",
-      "  0.         0.05171938]\n",
-      " [0.         0.2939465  0.         0.         0.         0.\n",
-      "  0.18007928 0.43213072 0.12091967 0.         0.53133243 0.12605792\n",
-      "  0.01825903 0.01287796 0.17238477 0.         0.         0.\n",
-      "  0.         0.05171938]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Before ReLU: {hidden1}\\n\\n\")\n",
     "hidden1 = nn.ReLU()(hidden1)\n",
@@ -377,24 +262,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 10)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "seq_modules = nn.SequentialCell(\n",
     "    flatten,\n",
@@ -418,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,65 +315,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model structure: Network<\n",
-      "  (flatten): Flatten<>\n",
-      "  (dense_relu_sequential): SequentialCell<\n",
-      "    (0): Dense<input_channels=784, output_channels=512, has_bias=True>\n",
-      "    (1): ReLU<>\n",
-      "    (2): Dense<input_channels=512, output_channels=512, has_bias=True>\n",
-      "    (3): ReLU<>\n",
-      "    (4): Dense<input_channels=512, output_channels=10, has_bias=True>\n",
-      "    >\n",
-      "  >\n",
-      "\n",
-      "\n",
-      "Layer: dense_relu_sequential.0.weight\n",
-      "Size: (512, 784)\n",
-      "Values : [[-0.01491369  0.00353318 -0.00694948 ...  0.01226766 -0.00014423\n",
-      "   0.00544263]\n",
-      " [ 0.00212971  0.0019974  -0.00624789 ... -0.01214037  0.00118004\n",
-      "  -0.01594325]] \n",
-      "\n",
-      "Layer: dense_relu_sequential.0.bias\n",
-      "Size: (512,)\n",
-      "Values : [0. 0.] \n",
-      "\n",
-      "Layer: dense_relu_sequential.2.weight\n",
-      "Size: (512, 512)\n",
-      "Values : [[ 0.00565423  0.00354313  0.00637383 ... -0.00352688  0.00262949\n",
-      "   0.01157355]\n",
-      " [-0.01284141  0.00657666 -0.01217057 ...  0.00318963  0.00319115\n",
-      "  -0.00186801]] \n",
-      "\n",
-      "Layer: dense_relu_sequential.2.bias\n",
-      "Size: (512,)\n",
-      "Values : [0. 0.] \n",
-      "\n",
-      "Layer: dense_relu_sequential.4.weight\n",
-      "Size: (10, 512)\n",
-      "Values : [[ 0.0087168  -0.00381866 -0.00865665 ... -0.00273731 -0.00391623\n",
-      "   0.00612853]\n",
-      " [-0.00593031  0.0008721  -0.0060081  ... -0.00271535 -0.00850481\n",
-      "  -0.00820513]] \n",
-      "\n",
-      "Layer: dense_relu_sequential.4.bias\n",
-      "Size: (10,)\n",
-      "Values : [0. 0.] \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Model structure: {model}\\n\\n\")\n",
     "\n",
@@ -517,9 +339,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MindSpore",
+   "display_name": "Conda-python3",
    "language": "python",
-   "name": "mindspore"
+   "name": "conda-python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -531,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
