--- a/Introduction/Tutorial/07-函数式自动微分.ipynb
+++ b/Introduction/Tutorial/07-函数式自动微分.ipynb
@@ -4,15 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![下载Notebook](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/resource/_static/logo_notebook.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3.0rc2/tutorials/zh_cn/beginner/mindspore_autograd.ipynb)&emsp;[![下载样例代码](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/resource/_static/logo_download_code.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3.0rc2/tutorials/zh_cn/beginner/mindspore_autograd.py)&emsp;[![查看源文件](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/resource/_static/logo_source.svg)](https://gitee.com/mindspore/docs/blob/r2.3.0rc2/tutorials/source_zh_cn/beginner/autograd.ipynb)\n",
-    "\n",
-    "[基本介绍](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/introduction.html) || [快速入门](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/quick_start.html) || [张量 Tensor](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/tensor.html) || [数据集 Dataset](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/dataset.html) || [数据变换 Transforms](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/transforms.html) || [网络构建](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/model.html) || **函数式自动微分** || [模型训练](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/train.html) || [保存与加载](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/save_load.html) || [使用静态图加速](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/accelerate_with_static_graph.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 函数式自动微分\n",
     "\n",
     "神经网络的训练主要使用反向传播算法，模型预测值（logits）与正确标签（label）送入损失函数（loss function）获得loss，然后进行反向传播计算，求得梯度（gradients），最终更新至模型参数（parameters）。自动微分能够计算可导函数在某点处的导数值，是反向传播算法的一般化。自动微分主要解决的问题是将一个复杂的数学运算分解为一系列简单的基本运算，该功能对用户屏蔽了大量的求导细节和过程，大大降低了框架的使用门槛。\n",
@@ -21,10 +12,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%capture captured_output\n",
     "# 实验环境已经预装了mindspore==2.2.14，如需更换mindspore版本，可更改下面mindspore的版本号\n",
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +44,7 @@
     "\n",
     "计算图是用图论语言表示数学函数的一种方式，也是深度学习框架表达神经网络模型的统一方法。我们将根据下面的计算图构造计算函数和神经网络。\n",
     "\n",
-    "![compute-graph](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/tutorials/source_zh_cn/beginner/images/comp-graph.png)"
+    "![compute-graph](pic/comp-graph.png)"
    ]
   },
   {
@@ -65,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,20 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Tensor(shape=[], dtype=Float32, value= 0.914285)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "loss = function(x, y, w, b)\n",
     "print(loss)"
@@ -148,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,26 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Tensor(shape=[5, 3], dtype=Float32, value=\n",
-       " [[ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "  [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "  [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "  [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "  [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01]]),\n",
-       " Tensor(shape=[3], dtype=Float32, value= [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01]))"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "grads = grad_fn(x, y, w, b)\n",
     "print(grads)"
@@ -207,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,26 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Tensor(shape=[5, 3], dtype=Float32, value=\n",
-       " [[ 1.06568694e+00,  1.05373347e+00,  1.30146706e+00],\n",
-       "  [ 1.06568694e+00,  1.05373347e+00,  1.30146706e+00],\n",
-       "  [ 1.06568694e+00,  1.05373347e+00,  1.30146706e+00],\n",
-       "  [ 1.06568694e+00,  1.05373347e+00,  1.30146706e+00],\n",
-       "  [ 1.06568694e+00,  1.05373347e+00,  1.30146706e+00]]),\n",
-       " Tensor(shape=[3], dtype=Float32, value= [ 1.06568694e+00,  1.05373347e+00,  1.30146706e+00]))"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "grad_fn = mindspore.grad(function_with_logits, (2, 3))\n",
     "grads = grad_fn(x, y, w, b)\n",
@@ -254,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,26 +212,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Tensor(shape=[5, 3], dtype=Float32, value=\n",
-       " [[ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "  [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "  [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "  [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "  [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01]]),\n",
-       " Tensor(shape=[3], dtype=Float32, value= [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01]))"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "grad_fn = mindspore.grad(function_stop_gradient, (2, 3))\n",
     "grads = grad_fn(x, y, w, b)\n",
@@ -314,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,27 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((Tensor(shape=[5, 3], dtype=Float32, value=\n",
-       "  [[ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "   [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "   [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "   [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "   [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01]]),\n",
-       "  Tensor(shape=[3], dtype=Float32, value= [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01])),\n",
-       " Tensor(shape=[3], dtype=Float32, value= [-1.40476596e+00, -1.64932394e+00,  2.24711204e+00]))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "grads, (z,) = grad_fn(x, y, w, b)\n",
     "print(grads, z)"
@@ -374,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,26 +360,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Tensor(shape=[5, 3], dtype=Float32, value=\n",
-       " [[ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "  [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "  [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "  [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01],\n",
-       "  [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01]]),\n",
-       " Tensor(shape=[3], dtype=Float32, value= [ 6.56869709e-02,  5.37334494e-02,  3.01467031e-01]))"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "loss, grads = grad_fn(x, y)\n",
     "print(grads)"
@@ -484,9 +378,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MindSpore",
+   "display_name": "Conda-python3",
    "language": "python",
-   "name": "mindspore"
+   "name": "conda-python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -498,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.4"
   },
   "vscode": {
    "interpreter": {
