--- a/Introduction/Tutorial/08-模型训练.ipynb
+++ b/Introduction/Tutorial/08-模型训练.ipynb
@@ -8,19 +8,6 @@
     }
    },
    "source": [
-    "[![下载Notebook](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/resource/_static/logo_notebook.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3.0rc2/tutorials/zh_cn/beginner/mindspore_train.ipynb)&emsp;[![下载样例代码](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/resource/_static/logo_download_code.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3.0rc2/tutorials/zh_cn/beginner/mindspore_train.py)&emsp;[![查看源文件](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/resource/_static/logo_source.svg)](https://gitee.com/mindspore/docs/blob/r2.3.0rc2/tutorials/source_zh_cn/beginner/train.ipynb)\n",
-    "\n",
-    "[基本介绍](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/introduction.html) || [快速入门](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/quick_start.html) || [张量 Tensor](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/tensor.html) || [数据集 Dataset](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/dataset.html) || [数据变换 Transforms](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/transforms.html) || [网络构建](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/model.html) || [函数式自动微分](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/autograd.html) || **模型训练** || [保存与加载](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/save_load.html) || [使用静态图加速](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/accelerate_with_static_graph.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
     "# 模型训练\n",
     "\n",
     "模型训练一般分为四个步骤：\n",
@@ -47,10 +34,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%capture captured_output\n",
     "# 实验环境已经预装了mindspore==2.2.14，如需更换mindspore版本，可更改下面mindspore的版本号\n",
@@ -60,25 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/datasets/MNIST_Data.zip (10.3 MB)\n",
-      "\n",
-      "file_sizes: 100%|██████████████████████████| 10.8M/10.8M [00:05<00:00, 2.07MB/s]\n",
-      "Extracting zip file...\n",
-      "Successfully downloaded / unzipped to ./\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mindspore\n",
     "from mindspore import nn\n",
@@ -126,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -181,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -211,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -239,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -296,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -343,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -378,66 +353,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1\n",
-      "-------------------------------\n",
-      "loss: 2.302806  [  0/938]\n",
-      "loss: 2.285086  [100/938]\n",
-      "loss: 2.264712  [200/938]\n",
-      "loss: 2.174010  [300/938]\n",
-      "loss: 1.931853  [400/938]\n",
-      "loss: 1.340721  [500/938]\n",
-      "loss: 0.953515  [600/938]\n",
-      "loss: 0.756860  [700/938]\n",
-      "loss: 0.756263  [800/938]\n",
-      "loss: 0.463846  [900/938]\n",
-      "Test: \n",
-      " Accuracy: 84.7%, Avg loss: 0.527155 \n",
-      "\n",
-      "Epoch 2\n",
-      "-------------------------------\n",
-      "loss: 0.479126  [  0/938]\n",
-      "loss: 0.437443  [100/938]\n",
-      "loss: 0.685504  [200/938]\n",
-      "loss: 0.395121  [300/938]\n",
-      "loss: 0.550566  [400/938]\n",
-      "loss: 0.459457  [500/938]\n",
-      "loss: 0.293049  [600/938]\n",
-      "loss: 0.422102  [700/938]\n",
-      "loss: 0.333153  [800/938]\n",
-      "loss: 0.412182  [900/938]\n",
-      "Test: \n",
-      " Accuracy: 90.5%, Avg loss: 0.335083 \n",
-      "\n",
-      "Epoch 3\n",
-      "-------------------------------\n",
-      "loss: 0.207366  [  0/938]\n",
-      "loss: 0.343559  [100/938]\n",
-      "loss: 0.391145  [200/938]\n",
-      "loss: 0.317566  [300/938]\n",
-      "loss: 0.200746  [400/938]\n",
-      "loss: 0.445798  [500/938]\n",
-      "loss: 0.603720  [600/938]\n",
-      "loss: 0.170811  [700/938]\n",
-      "loss: 0.411954  [800/938]\n",
-      "loss: 0.315902  [900/938]\n",
-      "Test: \n",
-      " Accuracy: 91.9%, Avg loss: 0.279034 \n",
-      "\n",
-      "Done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loss_fn = nn.CrossEntropyLoss()\n",
     "optimizer = nn.SGD(model.trainable_params(), learning_rate=learning_rate)\n",
@@ -452,9 +374,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MindSpore",
+   "display_name": "Conda-python3",
    "language": "python",
-   "name": "mindspore"
+   "name": "conda-python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -466,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5 (default, Oct 25 2019, 15:51:11) \n[GCC 7.3.0]"
+   "version": "3.6.4"
   },
   "vscode": {
    "interpreter": {
