--- a/Introduction/Tutorial/10-使用静态图加速.ipynb
+++ b/Introduction/Tutorial/10-使用静态图加速.ipynb
@@ -5,10 +5,6 @@
    "id": "69a92ef2",
    "metadata": {},
    "source": [
-    "[![下载Notebook](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/resource/_static/logo_notebook.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3.0rc2/tutorials/zh_cn/beginner/mindspore_accelerate_with_static_graph.ipynb)&emsp;[![下载样例代码](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/resource/_static/logo_download_code.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3.0rc2/tutorials/zh_cn/beginner/mindspore_accelerate_with_static_graph.py)&emsp;[![查看源文件](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3.0rc2/resource/_static/logo_source.svg)](https://gitee.com/mindspore/docs/blob/r2.3.0rc2/tutorials/source_zh_cn/beginner/accelerate_with_static_graph.ipynb)\n",
-    "\n",
-    "[基本介绍](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/introduction.html) || [快速入门](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/quick_start.html) || [张量 Tensor](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/tensor.html) || [数据集 Dataset](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/dataset.html) || [数据变换 Transforms](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/transforms.html) || [网络构建](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/model.html) || [函数式自动微分](https://gitee.com/mindspore/docs/blob/r2.3.0rc2/tutorials/source_zh_cn/beginner/autograd.ipynb) || [模型训练](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/train.html) || [保存与加载](https://www.mindspore.cn/tutorials/zh-CN/r2.3.0rc2/beginner/save_load.html) || **使用静态图加速**\n",
-    "\n",
     "# 使用静态图加速\n",
     "\n",
     "## 背景介绍\n",
@@ -24,50 +20,24 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "e5c55bf3e64a55bb",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%capture captured_output\n",
     "# 实验环境已经预装了mindspore==2.2.14，如需更换mindspore版本，可更改下面mindspore的版本号\n",
     "!pip uninstall mindspore -y\n",
     "!pip install -i https://pypi.mirrors.ustc.edu.cn/simple mindspore==2.2.14"
-   ],
-   "id": "e5c55bf3e64a55bb"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6dc8d4c5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-0.00134926 -0.13563682 -0.02863023 -0.05452826  0.03290743 -0.12423715\n",
-      "  -0.0582641  -0.10854103 -0.08558805  0.06099342]\n",
-      " [-0.00134926 -0.13563682 -0.02863023 -0.05452826  0.03290743 -0.12423715\n",
-      "  -0.0582641  -0.10854103 -0.08558805  0.06099342]\n",
-      " [-0.00134926 -0.13563682 -0.02863023 -0.05452826  0.03290743 -0.12423715\n",
-      "  -0.0582641  -0.10854103 -0.08558805  0.06099342]\n",
-      " [-0.00134926 -0.13563682 -0.02863023 -0.05452826  0.03290743 -0.12423715\n",
-      "  -0.0582641  -0.10854103 -0.08558805  0.06099342]\n",
-      " [-0.00134926 -0.13563682 -0.02863023 -0.05452826  0.03290743 -0.12423715\n",
-      "  -0.0582641  -0.10854103 -0.08558805  0.06099342]\n",
-      " ...\n",
-      " [-0.00134926 -0.13563682 -0.02863023 -0.05452826  0.03290743 -0.12423715\n",
-      "  -0.0582641  -0.10854103 -0.08558805  0.06099342]\n",
-      " [-0.00134926 -0.13563682 -0.02863023 -0.05452826  0.03290743 -0.12423715\n",
-      "  -0.0582641  -0.10854103 -0.08558805  0.06099342]\n",
-      " [-0.00134926 -0.13563682 -0.02863023 -0.05452826  0.03290743 -0.12423715\n",
-      "  -0.0582641  -0.10854103 -0.08558805  0.06099342]\n",
-      " [-0.00134926 -0.13563682 -0.02863023 -0.05452826  0.03290743 -0.12423715\n",
-      "  -0.0582641  -0.10854103 -0.08558805  0.06099342]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import mindspore as ms\n",
@@ -113,34 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2476e059",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.05363735  0.05117104 -0.03343301  0.06347139  0.07546629  0.03263091\n",
-      "   0.02790363  0.06269836  0.01838502  0.04387159]\n",
-      " [ 0.05363735  0.05117104 -0.03343301  0.06347139  0.07546629  0.03263091\n",
-      "   0.02790363  0.06269836  0.01838502  0.04387159]\n",
-      " [ 0.05363735  0.05117104 -0.03343301  0.06347139  0.07546629  0.03263091\n",
-      "   0.02790363  0.06269836  0.01838502  0.04387159]\n",
-      " [ 0.05363735  0.05117104 -0.03343301  0.06347139  0.07546629  0.03263091\n",
-      "   0.02790363  0.06269836  0.01838502  0.04387159]\n",
-      " ...\n",
-      " [ 0.05363735  0.05117104 -0.03343301  0.06347139  0.07546629  0.03263091\n",
-      "   0.02790363  0.06269836  0.01838502  0.04387159]\n",
-      " [ 0.05363735  0.05117104 -0.03343301  0.06347139  0.07546629  0.03263091\n",
-      "   0.02790363  0.06269836  0.01838502  0.04387159]\n",
-      " [ 0.05363735  0.05117104 -0.03343301  0.06347139  0.07546629  0.03263091\n",
-      "   0.02790363  0.06269836  0.01838502  0.04387159]\n",
-      " [ 0.05363735  0.05117104 -0.03343301  0.06347139  0.07546629  0.03263091\n",
-      "   0.02790363  0.06269836  0.01838502  0.04387159]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import mindspore as ms\n",
@@ -194,34 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d97a2f69",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-0.12126954  0.06986676 -0.2230821  -0.07087803 -0.01003947  0.01063392\n",
-      "   0.10143848 -0.0200909  -0.09724037  0.0114444 ]\n",
-      " [-0.12126954  0.06986676 -0.2230821  -0.07087803 -0.01003947  0.01063392\n",
-      "   0.10143848 -0.0200909  -0.09724037  0.0114444 ]\n",
-      " [-0.12126954  0.06986676 -0.2230821  -0.07087803 -0.01003947  0.01063392\n",
-      "   0.10143848 -0.0200909  -0.09724037  0.0114444 ]\n",
-      " [-0.12126954  0.06986676 -0.2230821  -0.07087803 -0.01003947  0.01063392\n",
-      "   0.10143848 -0.0200909  -0.09724037  0.0114444 ]\n",
-      " ...\n",
-      " [-0.12126954  0.06986676 -0.2230821  -0.07087803 -0.01003947  0.01063392\n",
-      "   0.10143848 -0.0200909  -0.09724037  0.0114444 ]\n",
-      " [-0.12126954  0.06986676 -0.2230821  -0.07087803 -0.01003947  0.01063392\n",
-      "   0.10143848 -0.0200909  -0.09724037  0.0114444 ]\n",
-      " [-0.12126954  0.06986676 -0.2230821  -0.07087803 -0.01003947  0.01063392\n",
-      "   0.10143848 -0.0200909  -0.09724037  0.0114444 ]\n",
-      " [-0.12126954  0.06986676 -0.2230821  -0.07087803 -0.01003947  0.01063392\n",
-      "   0.10143848 -0.0200909  -0.09724037  0.0114444 ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import mindspore as ms\n",
@@ -265,34 +187,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7337a0bb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.11027216 -0.09628229  0.0457969   0.05396656 -0.06958974  0.0428197\n",
-      "  -0.1572069  -0.14151613 -0.04531277  0.07521383]\n",
-      " [ 0.11027216 -0.09628229  0.0457969   0.05396656 -0.06958974  0.0428197\n",
-      "  -0.1572069  -0.14151613 -0.04531277  0.07521383]\n",
-      " [ 0.11027216 -0.09628229  0.0457969   0.05396656 -0.06958974  0.0428197\n",
-      "  -0.1572069  -0.14151613 -0.04531277  0.07521383]\n",
-      " [ 0.11027216 -0.09628229  0.0457969   0.05396656 -0.06958974  0.0428197\n",
-      "  -0.1572069  -0.14151613 -0.04531277  0.07521383]\n",
-      " ...\n",
-      " [ 0.11027216 -0.09628229  0.0457969   0.05396656 -0.06958974  0.0428197\n",
-      "  -0.1572069  -0.14151613 -0.04531277  0.07521383]\n",
-      " [ 0.11027216 -0.09628229  0.0457969   0.05396656 -0.06958974  0.0428197\n",
-      "  -0.1572069  -0.14151613 -0.04531277  0.07521383]\n",
-      " [ 0.11027216 -0.09628229  0.0457969   0.05396656 -0.06958974  0.0428197\n",
-      "  -0.1572069  -0.14151613 -0.04531277  0.07521383]\n",
-      " [ 0.11027216 -0.09628229  0.0457969   0.05396656 -0.06958974  0.0428197\n",
-      "  -0.1572069  -0.14151613 -0.04531277  0.07521383]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import mindspore as ms\n",
@@ -336,34 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e51b32f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.10522258  0.06597593 -0.09440921 -0.04883489  0.07194916  0.1343117\n",
-      "  -0.06813788  0.01986085  0.0216996  -0.05345828]\n",
-      " [ 0.10522258  0.06597593 -0.09440921 -0.04883489  0.07194916  0.1343117\n",
-      "  -0.06813788  0.01986085  0.0216996  -0.05345828]\n",
-      " [ 0.10522258  0.06597593 -0.09440921 -0.04883489  0.07194916  0.1343117\n",
-      "  -0.06813788  0.01986085  0.0216996  -0.05345828]\n",
-      " [ 0.10522258  0.06597593 -0.09440921 -0.04883489  0.07194916  0.1343117\n",
-      "  -0.06813788  0.01986085  0.0216996  -0.05345828]\n",
-      " ...\n",
-      " [ 0.10522258  0.06597593 -0.09440921 -0.04883489  0.07194916  0.1343117\n",
-      "  -0.06813788  0.01986085  0.0216996  -0.05345828]\n",
-      " [ 0.10522258  0.06597593 -0.09440921 -0.04883489  0.07194916  0.1343117\n",
-      "  -0.06813788  0.01986085  0.0216996  -0.05345828]\n",
-      " [ 0.10522258  0.06597593 -0.09440921 -0.04883489  0.07194916  0.1343117\n",
-      "  -0.06813788  0.01986085  0.0216996  -0.05345828]\n",
-      " [ 0.10522258  0.06597593 -0.09440921 -0.04883489  0.07194916  0.1343117\n",
-      "  -0.06813788  0.01986085  0.0216996  -0.05345828]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import mindspore as ms\n",
@@ -405,34 +279,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bb1d7b61",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.08501796 -0.04404321 -0.05165704  0.00357929  0.00051521  0.00946456\n",
-      "   0.02748473 -0.19415936 -0.00278988  0.04024826]\n",
-      " [ 0.08501796 -0.04404321 -0.05165704  0.00357929  0.00051521  0.00946456\n",
-      "   0.02748473 -0.19415936 -0.00278988  0.04024826]\n",
-      " [ 0.08501796 -0.04404321 -0.05165704  0.00357929  0.00051521  0.00946456\n",
-      "   0.02748473 -0.19415936 -0.00278988  0.04024826]\n",
-      " [ 0.08501796 -0.04404321 -0.05165704  0.00357929  0.00051521  0.00946456\n",
-      "   0.02748473 -0.19415936 -0.00278988  0.04024826]\n",
-      " ...\n",
-      " [ 0.08501796 -0.04404321 -0.05165704  0.00357929  0.00051521  0.00946456\n",
-      "   0.02748473 -0.19415936 -0.00278988  0.04024826]\n",
-      " [ 0.08501796 -0.04404321 -0.05165704  0.00357929  0.00051521  0.00946456\n",
-      "   0.02748473 -0.19415936 -0.00278988  0.04024826]\n",
-      " [ 0.08501796 -0.04404321 -0.05165704  0.00357929  0.00051521  0.00946456\n",
-      "   0.02748473 -0.19415936 -0.00278988  0.04024826]\n",
-      " [ 0.08501796 -0.04404321 -0.05165704  0.00357929  0.00051521  0.00946456\n",
-      "   0.02748473 -0.19415936 -0.00278988  0.04024826]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import mindspore as ms\n",
@@ -487,9 +337,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MindSpore",
+   "display_name": "Conda-python3",
    "language": "python",
-   "name": "mindspore"
+   "name": "conda-python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -501,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
