--- a/Introduction/Tutorial/03-张量Tensor.ipynb
+++ b/Introduction/Tutorial/03-张量Tensor.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[![下载Notebook](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_notebook.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3/tutorials/zh_cn/beginner/mindspore_tensor.ipynb)&emsp;[![下载样例代码](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_download_code.svg)](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/notebook/r2.3/tutorials/zh_cn/beginner/mindspore_tensor.py)\n",
-    "&emsp;[![查看源文件](https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_source.svg)](https://gitee.com/mindspore/docs/blob/r2.3/tutorials/source_zh_cn/beginner/tensor.ipynb)\n",
-    "\n",
-    "[基本介绍](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/introduction.html) || [快速入门](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/quick_start.html) || **张量 Tensor** || [数据集 Dataset](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/dataset.html) || [数据变换 Transforms](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/transforms.html) || [网络构建](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/model.html) || [函数式自动微分](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/autograd.html) || [模型训练](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/train.html) || [保存与加载](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/save_load.html) || [使用静态图加速](https://www.mindspore.cn/tutorials/zh-CN/r2.3/beginner/accelerate_with_static_graph.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -24,10 +14,10 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%capture captured_output\n",
     "# 实验环境已经预装了mindspore==2.2.14，如需更换mindspore版本，可更改下面mindspore的版本号\n",
@@ -37,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,17 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 0 1 0] (4,) Int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = [1, 0, 1, 0]\n",
     "x_data = Tensor(data)\n",
@@ -90,17 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 0 1 0] (4,) Int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "np_array = np.array(data)\n",
     "x_np = Tensor(np_array)\n",
@@ -124,22 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor1:\n",
-      " [[1. 1.]\n",
-      " [1. 1.]]\n",
-      "tensor2:\n",
-      " [[-0.00063482 -0.00916224]\n",
-      " [ 0.01324238 -0.0171206 ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindspore.common.initializer import One, Normal\n",
     "\n",
@@ -163,22 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ones Tensor: \n",
-      " [1 1 1 1] \n",
-      "\n",
-      "Zeros Tensor: \n",
-      " [0 0 0 0] \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindspore import ops\n",
     "\n",
@@ -214,23 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x_shape: (2, 2)\n",
-      "x_dtype: Int32\n",
-      "x_itemsize: 4\n",
-      "x_nbytes: 16\n",
-      "x_ndim: 2\n",
-      "x_size: 4\n",
-      "x_strides: (8, 4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = Tensor(np.array([[1, 2], [3, 4]]), mindspore.int32)\n",
     "\n",
@@ -254,20 +188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First row: [0. 1.]\n",
-      "value of bottom right corner: 3.0\n",
-      "Last column: [1. 3.]\n",
-      "First column: [0. 2.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tensor = Tensor(np.array([[0, 1], [2, 3]]).astype(np.float32))\n",
     "\n",
@@ -290,22 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "add: [5. 7. 9.]\n",
-      "sub: [-3. -3. -3.]\n",
-      "mul: [ 4. 10. 18.]\n",
-      "div: [4.  2.5 2. ]\n",
-      "mod: [0. 1. 0.]\n",
-      "floordiv: [4. 2. 2.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = Tensor(np.array([1, 2, 3]), mindspore.float32)\n",
     "y = Tensor(np.array([4, 5, 6]), mindspore.float32)\n",
@@ -334,22 +244,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0. 1.]\n",
-      " [2. 3.]\n",
-      " [4. 5.]\n",
-      " [6. 7.]]\n",
-      "shape:\n",
-      " (4, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data1 = Tensor(np.array([[0, 1], [2, 3]]).astype(np.float32))\n",
     "data2 = Tensor(np.array([[4, 5], [6, 7]]).astype(np.float32))\n",
@@ -368,23 +265,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[0. 1.]\n",
-      "  [2. 3.]]\n",
-      "\n",
-      " [[4. 5.]\n",
-      "  [6. 7.]]]\n",
-      "shape:\n",
-      " (2, 2, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data1 = Tensor(np.array([[0, 1], [2, 3]]).astype(np.float32))\n",
     "data2 = Tensor(np.array([[4, 5], [6, 7]]).astype(np.float32))\n",
@@ -409,18 +292,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "t: [1. 1. 1. 1. 1.] <class 'mindspore.common.tensor.Tensor'>\n",
-      "n: [1. 1. 1. 1. 1.] <class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = Tensor([1., 1., 1., 1., 1.])\n",
     "print(f\"t: {t}\", type(t))\n",
@@ -439,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,18 +323,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "n: [2. 2. 2. 2. 2.] <class 'numpy.ndarray'>\n",
-      "t: [2. 2. 2. 2. 2.] <class 'mindspore.common.tensor.Tensor'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.add(n, 1, out=n)\n",
     "print(f\"n: {n}\", type(n))\n",
@@ -505,17 +370,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "indptr = Tensor([0, 1, 2])\n",
     "indices = Tensor([0, 1])\n",
@@ -565,21 +422,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1. 2.]\n",
-      "[[0 1]\n",
-      " [1 2]]\n",
-      "(3, 4)\n",
-      "Float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "indices = Tensor([[0, 1], [1, 2]], dtype=mindspore.int32)\n",
     "values = Tensor([1, 2], dtype=mindspore.float32)\n",
@@ -614,9 +459,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MindSpore",
+   "display_name": "Conda-python3",
    "language": "python",
-   "name": "mindspore"
+   "name": "conda-python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -628,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
